@@ -52,7 +52,7 @@ union float_long
   };
 
 /* compare two floats */
-char
+_Bool
 __fsgt (float a1, float a2) _FS_REENTRANT
 {
   volatile union float_long fl1, fl2;
